# azure-iot-sdks

c/iothub_client/devdoc/requirement_docs/: iothubtransportamqp_amqp_connection_requirements.md  iothubtransportamqp_cbs_auth_requirements.md  iothubtransportamqp_core_cbs_key_requirements.md  iothubtransportamqp_core_cbs_sas_requirements.md  iothubtransportamqp_core_common_requirements.md  iothubtransportamqp_core_interface.md  iothubtransportamqp_core_x509_cert_requirements.md  iothubtransportamqp_messenger_requirements.md
c/iothub_client/inc/: iothubtransportamqp_amqp_connection.h  iothubtransportamqp_cbs_auth.h  iothubtransportamqp_core_cbs_key.h  iothubtransportamqp_core_common.h  iothubtransportamqp_core_interface.h  iothubtransportamqp_messenger.h
c/iothub_client/samples/: CMakeLists.txt
c/iothub_client/samples/iothub_client_file_download_sample/: CMakeLists.txt  iothub_client_file_download_sample.c  iothub_client_file_download_sample.h  main.c
c/iothub_client/samples/iothub_client_sample_devicetwin/: CMakeLists.txt  iothub_client_sample_devicetwin.c  iothub_client_sample_devicetwin.h
c/iothub_client/src/: iothub_client.c
tools/DeviceExplorer/DeviceExplorer/: DeviceTwinPropertiesForm.cs
